# faqmy-bot

./: Dockerfile  README.md  app.py  bot_query.py  core_stuff.py  docker-compose.yml  pydantic_stuff.py  pyproject.toml
scripts/: ask.sh  create.sh  detail.sh  health.sh  list.sh  search.sh  upload.sh  upload_folder.sh
